--- a/projetoHTML2/style.css
+++ b/projetoHTML2/style.css
@@ -17,6 +17,19 @@ li{
 li a{
     text-decoration: none;
 }
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+input{
+    border-radius: 20px;
+    height: 30px;
+    width: 300px;
+}
+textarea{
+    border-radius: 2px;
+    height: 50px;
+    width: 300px;
+}
  /* HEARDER ----------------------------------------------------------------------------*/
 .wrapper {
     height: 100vh;
@@ -37,18 +50,33 @@ li a{
     justify-content: space-around;
     align-items: center;
 }
-
+.main .header, .header__sobre, .header__horarios{
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .main .header{
     background-image: url(./img/banner.png);
-    background-repeat: none;
-    background-size: cover;
 }
-.m-header__name{
+.main .header__sobre{
+    background-image: url(./img/banner-sobre.png);
+}
+.main .header__horarios{
+    background-image: url(./img/banner-horario.png);
+}
+.main .header__contato{
+    background-image: url(./img/banner-contato.png);
+}
+.m-header__name,.m-content__postagem h1{
     font-size: 4em;
     font-family: Arial black;
     color: transparent;
     -webkit-text-stroke: 2px rgb(104, 104, 104);
 }
+.active { 
+    text-shadow: 0px 0px 2px rgb(94, 94, 6); 
+}
+    
+
 /* BODY MENU -------------------------------------------------------------------*/
 .content .menu a img{
     margin: 40px 33px 0px 33px;
@@ -82,28 +110,57 @@ ul li{
 
 /* BODY POSTAGEM ----------------------------------------------------------------*/
 .m-content__postagem{
-    width: 100%;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 5%;
 }
-.m-content__postagem1{
-    flex: 1 0 50%;
-    background-color: red;    
+.m-content__postagem p:nth-child(2){
+    font-family: monospace;
+    font-size: 20px;
 }
-.m-content__postagem2{
-    flex: 1 0 50%;
-    background-color: red;    
+/* BODY POSTAGEM HORARIOS ----------------------------------------------------------------------*/
+.m-content__postagem__table{
+    border: 1px solid grey;
+    width: 100%;
+    height: 15%;
+    padding: 10px;
+    border-radius: 10px;
 }
-.m-content__postagem3{
-    flex: 1 0 100%;
-    background-color: green;
+.content__postagem__table td{
+    padding: 10px;
+}
+thead{
+    background-color: grey;
+    color: white;
 }
 
+/* BODY POSTAGEM CONTATO ----------------------------------------------------------------------*/
+.m-content__postagem__form{
+    display: contents;
+}
+.m-content__postagem__form label, input, button,textarea{
+    margin: 2px;
+}
+.m-content__postagem__form__btn{
+    display: flex;
+}
+.m-content__postagem__form__btn button{
+    margin: 0 10px;
+    border-radius: 5px;
+    width:80px;
+    height: 30px;
+}
 /* FOOTER ----------------------------------------------------------------------*/
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(46, 43, 115);
-    min-height: 150px;
-    border-radius: 20px;
-    
+    min-height: 50px;
+}
+.footer span{
+    color: white;
 }
